output/16498722.out
Traceback (most recent call last):
  File "main.py", line 14, in <module>
    from src.tasks import REGISTRY as TASK_REGISTRY
  File "/n/home07/haipeng/network-opt-rl/src/tasks/__init__.py", line 1, in <module>
    from src.tasks.task_basic_dqn import basic_dqn
  File "/n/home07/haipeng/network-opt-rl/src/tasks/task_basic_dqn.py", line 26, in <module>
    from src.agent.dqn import DQN
  File "/n/home07/haipeng/network-opt-rl/src/agent/dqn.py", line 27, in <module>
    from src.environment.env import NetworkEnv
  File "/n/home07/haipeng/network-opt-rl/src/environment/env.py", line 65
    [seeds.append(v) for v in range(self.N) if self.state[0][v]==1)] 
                                                                  ^
SyntaxError: invalid syntax
